@@ -94,7 +94,8 @@ $fwupplatforms = array('net45xx', 'net48xx', 'generic-pc', 'wrap');
 $my_identifier_list = array('myaddress' => 'My IP address',
 							'address' => 'IP address',
 							'fqdn' => 'Domain name',
-							'user_fqdn' => 'User FQDN');
+							'user_fqdn' => 'User FQDN',
+							'asn1dn' => 'RSA Cert Subject');
 
 $p1_ealgos = array('des' => 'DES', '3des' => '3DES', 'blowfish' => 'Blowfish', 
 					'cast128' => 'CAST128', 'aes' => 'AES');
